--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
+    background-color: lightgrey;
     line-height: 1;
   }
   
@@ -14,15 +15,17 @@ body {
   }
   
   .jumbotron {
+    font-family: 'Dancing Script', sans-serif;
     text-align: center;
-    background-color: transparent;
-    color: black;
+    background-color: darkolivegreen;
+    color: white;
     border-radius: 0;
     border-bottom: 10px solid black;
   }
   
   .description {
     white-space: pre-wrap;
+    font-weight: 600;
   }
   
   .time-block {
@@ -37,23 +40,30 @@ body {
   }
   
   .hour {
-    background-color: #ffffff;
-    color: #000000;
+    background-color: #ffeaa7;
+    color: rgb(82,82,82);
     border-top: 1px dashed #000000;
+    padding-top: 30px;
+    padding-left: 10px;
+    font-size: 25px;
+    font-weight: 500;
   }
   
   .past {
     background-color: #d3d3d3;
+    border-radius: 15px;
     color: white;
   }
   
   .present {
     background-color: #ff6961;
+    border-radius: 15px;
     color: white;
   }
   
   .future {
     background-color: #77dd77;
+    border-radius: 15px;
     color: white;
   }
   
