--- a/assets/style.css
+++ b/assets/style.css
@@ -50,7 +50,7 @@ body {
   }
   
   .past {
-    background-color: #d3d3d3;
+    background-color: #6b6969;
     border-radius: 15px;
     color: white;
   }
