--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
     background-color: lightgrey;
+    color: white;
     line-height: 1;
   }
   
@@ -9,7 +10,6 @@ body {
     background: transparent;
     border: none;
     resize: none;
-    color: #000000;
     border-left: 1px solid black;
     padding: 10px;
   }
@@ -25,11 +25,13 @@ body {
   
   .description {
     white-space: pre-wrap;
+
     font-weight: 600;
   }
   
   .time-block {
     text-align: center;
+    color: white;
     border-radius: 15px;
   }
   
@@ -63,8 +65,8 @@ body {
   
   .future {
     background-color: #77dd77;
-    border-radius: 15px;
     color: white;
+    border-radius: 15px;
   }
   
   .saveBtn {
